<resources>
    <string name="error_try_again">An error occurred. Please try again!</string>
    <string name="error_wrong_credentials">The entered password is wrong.</string>
    <string name="my_account">My Account</string>
    <string name="name">Name</string>
    <string name="address">Address</string>
    <string name="empty_safe_transactions_message">No transactions yet</string>
    <string name="remove">Remove</string>
    <string name="no_account_available">No account available. Please restart the app!</string>
    <string name="error_not_authorized_for_action">You are not authorized to perform this action.</string>
    <string name="error_check_internet_connection">Please make sure to have an internet connection.</string>
    <string name="error_ssl_handshake">Please check whether the time is correctly set.</string>
    <string name="tab_title_transactions">Transactions</string>
    <string name="tab_title_assets">Tokens</string>
    <string name="address_clipboard_success">Address copied to clipboard</string>
    <string name="share_address">Share address</string>
    <string name="x_data_bytes">%d bytes included</string>
    <string name="x_data_bytes_delegate_call">Delegate call with %d bytes</string>
    <string name="x_data_bytes_creation">Contract creation with %d bytes</string>
    <string name="submit_transaction">Submit Transaction</string>
    <string name="cancel">Cancel</string>
    <string name="invalid_ethereum_address">Invalid ethereum address</string>
    <string name="transaction_details_error">Error fetching transaction details</string>
    <string name="safe_remove_success">Removed %s from this device</string>
    <string name="loading">Loading…</string>
    <string name="remove_from_device">Remove from device</string>
    <string name="settings">Settings</string>
    <string name="no_entries">No entries</string>
    <string name="delete">Delete</string>
    <string name="dialog_delete_address_entry_message">Do you want to delete this entry from the address book?</string>
    <string name="toast_delete_address_book_entry">Removed %s from the address book</string>
    <string name="address_book">Address Book</string>
    <string name="name_cannot_be_blank">Name cannot be blank</string>
    <string name="address_already_in_address_book">This address is already in your address book</string>
    <string name="unknown_error">Unknown error</string>
    <string name="retry">Retry</string>
    <string name="address_book_entry_delete_error">Error deleting entry</string>
    <string name="safe_name_hint">Safe Name</string>
    <string name="estimated_transaction_fee">Estimated Network Fee</string>
    <string name="manage_tokens">Manage Tokens</string>
    <string name="scan_or_tap_to_copy">Scan or tap to copy</string>
    <string name="address_hint">Enter Address</string>
    <string name="value_hint">Enter Value</string>
    <string name="select_token">Select token to send</string>
    <string name="passwords_do_not_match">Sorry, the password doesn\'t match</string>
    <string name="password_too_short">Password should be at least 8 characters long</string>
    <string name="password_error_saving">Something went wrong. Could not save password.</string>
    <string name="enter_master_password">Enter Master Password</string>
    <string name="review_transaction">Review transaction</string>
    <string name="review_transaction_request">Review transaction request</string>
    <string name="fingerprint_not_recognized">Fingerprint not recognized. Please try again</string>
    <string name="switch_to_password">Switch to Password</string>
    <string name="fingerprint_unlock_disabled">Fingerprint unlock disabled</string>
    <string name="fingerprint_unlock_enabled">Fingerprint unlock enabled</string>
    <string name="status_pending">Pending</string>
    <string name="status_failed">Failed</string>
    <string name="status_success">Success</string>
    <string name="just_a_moment_ago">Just a moment ago</string>
    <string name="error_signature_not_owner">The signature was not created by a Safe owning device!</string>
    <string name="error_signature_already_exists">This signature has already been added!</string>
    <string name="current_password">Current password</string>
    <string name="new_password">New password</string>
    <string name="repeat_new_password">Repeat new password</string>
    <string name="change_password">Change Password</string>
    <string name="sign_transaction_request_message">You have been requested to sign a transaction</string>
    <string name="sign_transaction_request_title">Sign request</string>
    <string name="transaction_details">Transaction Details</string>
    <string name="view_transaction_on"><![CDATA[<font color=#008c73>View transaction on Etherscan.io</font>]]></string>
    <string name="no_safe_selected">No Safe selected</string>
    <string name="channel_signing_request_name">Signing Requests</string>
    <string name="channel_signing_request_description">Requests to sign transactions.</string>
    <string name="account_balance">Account Balance</string>
    <string name="this_device_address">This device address</string>
    <string name="ok">OK</string>
    <string name="setup_password">Setup Password</string>
    <string name="setup_password_info">Your confidential password is used to unlock the Safe and confirm transactions.</string>
    <string name="next">Next</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="confirm_password_hint">Confirm password</string>
    <string name="choose_password_hint">Choose password</string>
    <string name="confirm_password_info">Please enter your password again to confirm.</string>
    <string name="onboarding_intro_info">The most secure way to manage your crypto funds</string>
    <string name="create_password">Create Password</string>
    <string name="password_doesnt_match">Password doesn\'t match</string>
    <string name="confirm">Confirm</string>
    <string name="setup_fingerprint_place">Place your finger on the sensor to confirm your device fingerprint</string>
    <string name="setup_fingerprint_description">Once enabled you can use your fingerprint to unlock the app and confirm transactions.</string>
    <string name="skip">Skip</string>
    <string name="setup_fingerprint">Setup Fingerprint</string>
    <string name="fingerprint_confirmed">Fingerprint confirmed!</string>
    <string name="finish">Finish</string>
    <string name="password_validation_identical_characters">No triple characters</string>
    <string name="password_validation_minimum_characters">Use a minimum of 8 characters</string>
    <string name="password_validation_one_number_one_letter">At least 1 letter and 1 number</string>
    <string name="terms">Terms</string>
    <string name="terms_info"><![CDATA[Please review our <a href=\"https://safe.gnosis.io/terms\">Terms of Use</a> and <a href=\"https://safe.gnosis.io/privacy\">Privacy Policy</a>.]]></string>
    <string name="no_thanks">No Thanks</string>
    <string name="agree">Agree</string>
    <string name="personal_edition">Personal Edition</string>
    <string name="safe_balance">Safe balance</string>
    <string name="confirm_with_extension">Confirm this transaction with the Authenticator</string>
    <string name="rejected_by_extension">The transaction was rejected by the Authenticator</string>
    <string name="request_confirmation_wait_x_s">Please wait %s sec before resending request.</string>
    <string name="request_confirmation">Resend confirmation request</string>
    <string name="unknown_token">Unknown Token</string>
    <string name="continue_text">Continue</string>
    <string name="awaiting_confirmations">awaiting confirmation</string>
    <string name="confirmations_ready">transaction confirmed</string>
    <string name="submitting_transaction">Submitting transaction</string>
    <string name="rejecting_transaction">Rejecting transaction</string>
    <string name="send_x">Send %s</string>
    <string name="enter_password">Enter password</string>
    <string name="use_password">Use password</string>
    <string name="place_your_finger_to_unlock">Place your finger to unlock</string>
    <string name="reject">Reject</string>
    <string name="restricted_transaction_delegatecall">Delegate calls are not allowed</string>
    <string name="restricted_transaction_modify_signers">It is not allowed to modify the signers of the Safe</string>
    <string name="restricted_transaction_modify_modules">It is not allowed to modify the modules of the Safe</string>
    <string name="restricted_transaction_change_threshold">It is not allowed to change the threshold of the Safe</string>
    <string name="restricted_transaction_modify_proxy">It is not allowed to modify the proxy of the Safe</string>
    <string name="restricted_transaction_set_fallback_handler">It is not allowed to modify the fallback handler of the Safe</string>
    <string name="restricted_transaction_data_call_to_safe">It is not allowed to directly call a function on the Safe</string>
    <string name="error_loading_transaction">Error loading transaction</string>
    <string name="transaction_type_generic">Contract interaction</string>
    <string name="transaction_type_asset_transfer">Outgoing transfer</string>
    <string name="header_pending">Pending</string>
    <string name="header_today">Today</string>
    <string name="header_yesterday">Yesterday</string>
    <string name="header_older">Older</string>
    <string name="header_submitted">Submitted</string>
    <string name="send_token">Send token</string>
    <string name="share_qr_code_hint">This QR code can be scanned by the person who wants to send you tokens</string>
    <string name="default_safe_name">Safe</string>
    <string name="send">Send</string>
    <string name="receive">Receive</string>
    <string name="safe_intro_message_1">Your Safe will be connected to:\n
\t\t1. This mobile app.\n
\t\t2. The Authenticator.\n
\t\t3. Its 12-word recovery phrase.</string>
    <string name="safe_intro_message_2">Your funds are held securely in this mobile Safe and cannot be accessed by Gnosis Ltd.</string>
    <string name="safe_intro_message_3"><![CDATA[You need this Safe’s <font color=#f02525>recovery phrase</font> to access your funds when you change or loose your phone.\n
(Get ready to note it down and keep it somewhere safe.)]]></string>
    <string name="pairing_info">All transactions need to be approved by both this device and the Authenticator.</string>
    <string name="scan_qr_code">Scan QR Code</string>
    <string name="pending_safe_deposit_value">Send at least %s to your Safe\'s address:</string>
    <string name="fingerprint_many_tries">Too many tries. Switching to password</string>
    <string name="deposit_received">Deposit received.</string>
    <string name="creating_your_new_safe">Creating your new Safe</string>
    <string name="deploy_safe_description"><![CDATA[This process should take a couple of minutes. Follow progress on <font color=#008c73>Etherscan.io</font>]]></string>
    <string name="devices_paired_successfuly">Devices paired successfully</string>
    <string name="error_pairing_devices">Error pairing devices</string>
    <string name="mnemonic_error_invalid">Error (Invalid recovery key)</string>
    <string name="enable_2fa">Enable 2-factor authentication by connecting your Safe to the Authenticator.</string>
    <string name="open_be_link">1. Open the <a href="https://chrome.google.com/webstore/detail/gnosis-safe-mainnet-beta/iecodoenhaghdlpodmhooppdhjhmibde?hl=en" target="_blank">Gnosis Safe Authenticator link</a> on your desktop computer.</string>
    <string name="install_browser_extension">2. Install the Authenticator on your desktop computer and scan its QR code.</string>
    <string name="future_tx_approved_by_both">All future transactions will need to be approved by both devices.</string>
</resources>