<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/replace_extension_coordinator"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/replace_extension_content_scroll"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:clipToPadding="false"
        android:paddingBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/replace_extension_progress_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/replace_extension_title">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/replace_extension_info_1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="36dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="sans-serif"
                android:lineSpacingExtra="7sp"
                android:text="@string/enable_2fa"
                android:textColor="@color/dark_grey"
                android:textSize="13sp"
                android:textStyle="normal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/replace_extension_image" />

            <TextView
                android:id="@+id/replace_extension_info_2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:autoLink="web"
                android:fontFamily="sans-serif"
                android:lineSpacingExtra="7sp"
                android:text="@string/open_be_link"
                android:textColor="@color/dark_grey"
                android:textSize="13sp"
                android:textStyle="normal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/replace_extension_info_1" />

            <TextView
                android:id="@+id/replace_extension_info_3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="sans-serif"
                android:lineSpacingExtra="7sp"
                android:text="@string/install_browser_extension"
                android:textColor="@color/dark_grey"
                android:textSize="13sp"
                android:textStyle="normal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/replace_extension_info_2" />

            <TextView
                android:id="@+id/replace_extension_info_4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:fontFamily="sans-serif"
                android:lineSpacingExtra="7sp"
                android:text="@string/future_tx_approved_by_both"
                android:textColor="@color/dark_grey"
                android:textSize="13sp"
                android:textStyle="normal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/replace_extension_info_3" />

            <ImageView
                android:id="@+id/replace_extension_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/img_authenticator_connect" />

            <View
                android:id="@+id/replace_extension_divider"
                android:layout_width="wrap_content"
                android:layout_height="3dp"
                android:layout_marginTop="16dp"
                android:background="@color/pale_grey_two"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/replace_extension_info_4" />

            <include
                android:id="@+id/include"
                layout="@layout/include_transfer_summary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/replace_extension_divider" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <me.zhanghai.android.materialprogressbar.MaterialProgressBar
        android:id="@+id/replace_extension_progress_bar"
        style="@style/Widget.MaterialProgressBar.ProgressBar.Horizontal"
        android:layout_width="0dp"
        android:layout_height="4dp"
        android:indeterminate="true"
        android:minHeight="4dp"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/replace_extension_bottom_panel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:mpb_indeterminateTint="@color/safe_green"
        app:mpb_progressStyle="horizontal"
        app:mpb_setBothDrawables="true"
        app:mpb_useIntrinsicPadding="false" />

    <ImageView
        android:id="@+id/replace_extension_back_arrow"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/toolbar_height"
        android:background="@drawable/selectable_circle_background"
        android:padding="16dp"
        android:tint="@color/blue"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_arrow_back_24dp" />

    <TextView
        android:id="@+id/replace_extension_title"
        style="@style/WhiteTheme.ToolbarTitle"
        android:layout_width="0dp"
        android:layout_height="@dimen/toolbar_height"
        android:gravity="center_vertical"
        android:text="@string/connect_browser_extension"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/replace_extension_back_arrow"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/replace_extension_toolbar_shadow"
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_shadow_size"
        android:background="@drawable/toolbar_dropshadow"
        app:layout_constraintTop_toBottomOf="@id/replace_extension_title"
        tools:visibility="visible" />

    <pm.gnosis.heimdall.views.TwoStepPanel
        android:id="@+id/replace_extension_bottom_panel"
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:background="@drawable/two_step_panel"
        app:backVisible="false"
        app:forwardLabel="@string/scan_qr_code"
        app:layout_constraintBottom_toBottomOf="parent"
        app:step="none" />

</androidx.constraintlayout.widget.ConstraintLayout>
